--- a/Farmer/templates/Farmer/ChangePassword.html
+++ b/Farmer/templates/Farmer/ChangePassword.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>เข้าสู่ระบบ</title>
+	<title>เปลี่ยนรหัสผ่าน HarvestData</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -37,6 +37,10 @@
         .col-form-label{
             display: none;
         }
+        .form-text{
+            display: none;
+        }
+
     </style>
 
 </head>
@@ -47,30 +51,49 @@
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<form class="login100-form validate-form" action="" method="post" name="Login_Form" >
 					<span class="login100-form-title p-b-49">
-						เข้าสู่ระบบ HarvestData
+						เปลี่ยนรหัสผ่าน HarvestData
 					</span>
                         {% csrf_token %}
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
-                        <span class="label-input300">ชื่อผู้ใช้ :</span>
+                        <span class="label-input300">รหัสผ่านเก่า :</span>
                         </br>
                         </br>
-						{{ form.username |as_crispy_field }}
+						{{ form.old_password | as_crispy_field }}
 					</div>
+                </br>
 
-					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<span class="label-input300">รหัสผ่าน :</span>
+                    <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+                        <span class="label-input300">รหัสผ่านใหม่ :</span>
                         </br>
                         </br>
-						{{ form.password |as_crispy_field }}
+						{{ form.new_password1 | as_crispy_field }}
+                        <small id="hint_id_new_password1" >
+                            <ul>
+                        <li>- รหัสผ่านของคุณต้องไม่คล้ายกับข้อมูลส่วนตัวอื่น ๆ ของคุณ</li>
+                        <li>- รหัสผ่านของคุณต้องมีอย่างน้อย 8 ตัวอักษร</li>
+                        <li>- รหัสผ่านของคุณไม่สามารถใช้รหัสผ่านที่ใช้กันทั่วไปได้</li>
+                        <li>- รหัสผ่านของคุณต้องไม่เป็นตัวเลขทั้งหมด</li>
+                        </ul>
+                        </small>
+
 					</div>
-					<br>
+                </br>
+
+                    <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+                        <span class="label-input300">ยืนยันรหัสผ่านใหม่ :</span>
+                        </br>
+                        </br>
+						{{ form.new_password2 | as_crispy_field }}
+					</div>
+                </br>
+
+
 
 					<div class="container-login100-form-btn" >
-						<div class="wrap-login100-form-btn" >
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn" type="submit" style="background-image: url({% static 'Login/images/Green.jpg' %} );">
-								เข้าสู่ระบบ
-							</button>
+						<div >
+							<div ></div>
+							<button class="btn btn-warning" type="submit">แก้ไข</button>
+                            <a href="{% url 'index' %}" class="btn btn-danger" role="button">ยกเลิก</a>
 						</div>
 					</div>
 				</form>
