--- a/Farmer/templates/Farmer/CreateHarvest.html
+++ b/Farmer/templates/Farmer/CreateHarvest.html
@@ -5,7 +5,7 @@
 
     <section class="content-header">
         <center><h3>
-          เพิ่มข้อมูลการเก็บเกี่ยวชองเกษตรกร
+          เพิ่มข้อมูลการเก็บเกี่ยวของเกษตรกร '{{ viewplant.fruit_name }}' สายพันธุ์ : '{{ viewplant.fruit_breed }}'
         </h3></center>
       </section>
 <section class="content">
@@ -49,10 +49,14 @@
                     <span class="input-group-text" id="inputGroup-sizing-sm">ปี</span>
                 </div>
                 {{ harvestform.years|as_crispy_field }}
+            <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">ราคาต่อกิโลกรัม</span>
+                </div>
+                {{ harvestform.price|as_crispy_field }}
    </br></br>
             </div>
-                <button class="btn btn-success" type="submit">Add</button>
-                <a href="{% url 'viewHarvest' viewfarmers.id viewplant.id  %}" class="btn btn-danger" role="button">Cancel</a>
+                <button class="btn btn-success" type="submit">เพิ่ม</button>
+                <a href="{% url 'viewHarvest' viewfarmers.id viewplant.id  %}" class="btn btn-danger" role="button">ยกเลิก</a>
             </div>
         </form>
             </div>
