--- a/Farmer/templates/Farmer/EditPlant.html
+++ b/Farmer/templates/Farmer/EditPlant.html
@@ -2,13 +2,18 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block content %}
+            <section class="content-header">
+        <center><h3>
+          เพิ่มข้อมูลของเกษตรกร
+        </h3></center>
+      </section>
     <br>
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-10">
-    <div class="box box-primary">
+    <div class="box box-warning">
             <div class="box-header with-border">
-              <h3 class="box-title">เพิ่มข้อมูล ข้อมูลการปลูกของเกษตรกร</h3>
+              <h3 class="box-title">แก้ไขข้อมูลการปลูกของเกษตรกร</h3>
             </div>
             <div class="box-body">
                 <div class="form-group">
@@ -19,11 +24,12 @@
                 {{ editplantform|crispy }}
             </fieldset>
 
-                <button class="btn btn-success" type="submit">Add</button>
-                <a href="{% url 'viewFarmer' viewfarmers.id %}" class="btn btn-danger" role="button">Cancel</a>
+                <button class="btn btn-warning" type="submit">แก้ไข</button>
+                <a href="{% url 'viewFarmer' viewfarmers.id %}" class="btn btn-danger" role="button">ยกเลิก</a>
             </div>
         </form>
             </div>
     </div>
-            </div>
+    </div></div></div>
+
 {% endblock %}
