--- a/Farmer/templates/Farmer/logout.html
+++ b/Farmer/templates/Farmer/logout.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="{% static 'Login/images/icons/favicon.ico' %} ">
+	 <link rel="icon" type="image/png" href="{% static 'Farmer/img/green.png' %} ">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'Login/vendor/bootstrap/css/bootstrap.min.css' %}">
 <!--===============================================================================================-->
